--- a/welch.lyx
+++ b/welch.lyx
@@ -203,7 +203,7 @@ PY:
 fenêtre de Hann:
 \begin_inset Formula 
 \[
-w\left(n\right)=\frac{1}{2}-\frac{1}{2}\cos\left(\frac{2\pi n}{M-1}\right)\qquad0\le n<M
+w\left(n\right)=\frac{1}{2}-\frac{1}{2}\cos\left(\frac{2\pi n}{M}\right)\qquad0\le n<M
 \]
 
 \end_inset
@@ -293,6 +293,11 @@ Les segments doivent aussi être des puissances de 2.
 \end_inset
 
 
+\end_layout
+
+\begin_layout Standard
+github.com/indutny/fft.js/blob/master/README.
+ md
 \end_layout
 
 \end_body
